--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -154,6 +154,10 @@ $border-color: #e0e0e0;
       @include mdc-ripple-radius-bounded;
       @include mdc-states;
     }
+    & svg {
+      fill: $icon-color;
+      height: -webkit-fill-available;
+    }
   }
 
   &__section {
