--- a/web/app/assets/stylesheets/components/me-tab-bar.scss
+++ b/web/app/assets/stylesheets/components/me-tab-bar.scss
@@ -11,7 +11,9 @@
   position: sticky;
   top: 0;
   z-index: 5;
-  box-shadow: 0px 1px 6px 1px #00000030;
+  box-shadow: 0px 0px 1px 0px #0a0a0a99;
+  will-change: box-shadow;
+  transition: 250ms box-shadow ease;
   @include desktop-only {
     z-index: 3;
     padding: 0 0 0 73px;
@@ -21,6 +23,10 @@
     @include mdc-tab-bar-density(-1);
     top: 0;
     margin-bottom: 1px;
+  }
+
+  &--with-shadow {
+    box-shadow: 0px 1px 6px 1px #00000030;
   }
 
   & .mdc-tab {
@@ -39,9 +45,10 @@
   }
 
   & .mdc-tab__text-label {
-    font-size: 12px;
-    letter-spacing: 0.3px;
-    font-weight: 600;
+    font-size: 14px;
+    letter-spacing: 0;
+    font-weight: 500;
+    text-transform: none;
   }
 
   & .mdc-tab-scroller__scroll-content {
@@ -49,7 +56,7 @@
   }
 
   & .mdc-tab-indicator__content {
-    border-top-width: 4px;
+    border-top-width: 3px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
   }
