--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -64,7 +64,7 @@
 
 
   <% if current_user %>
-    <section class="me-section">
+    <section class="me-section me-section--condensed">
       <div class="me-section__inner">
         <%= render partial: 'saves',
                    locals:  {
