--- a/web/app/views/users/registrations/new.html.erb
+++ b/web/app/views/users/registrations/new.html.erb
@@ -47,7 +47,7 @@
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
               <div class="me-text-field mdc-text-field mdc-text-field--dense mdc-text-field--outlined me-text-field--fullwidth">
-                <%= f.text_field :name, autofocus: true, autocomplete: "name", required: true, class: 'mdc-text-field__input' %>
+                <%= f.text_field :name, autocomplete: "name", required: true, class: 'mdc-text-field__input' %>
                 <div class="mdc-notched-outline">
                   <div class="mdc-notched-outline__leading"></div>
                   <div class="mdc-notched-outline__notch">
