--- a/web/app/views/welcome/index.html.erb
+++ b/web/app/views/welcome/index.html.erb
@@ -179,7 +179,7 @@
         <div class="about__item" style="grid-area: r1">
           <h3 class="h3">O que é o Alegreme?</h3>
           <div class="about__content">
-            Alegreme é um projeto de <a href="https://www.instagram.com/jonataseduardo/">@jonastaseduardo</a> que usa inteligência artificial para buscar, categorizar e sugerir eventos de entretenimento na cidade. O aplicativo está em constante evolução, sendo que a cada dia que passa e quanto mais pessoas usam, melhor ele fica.
+            Alegreme é um projeto de <a href="https://www.linkedin.com/in/jonataseduardo/">@jonastaseduardo</a> que usa inteligência artificial para buscar, categorizar e sugerir eventos de entretenimento na cidade. O aplicativo está em constante evolução, sendo que a cada dia que passa e quanto mais pessoas usam, melhor ele fica.
           </div>
         </div>
         <!-- <div class="about__item" style="grid-area: r2">
