--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -242,9 +242,10 @@
               }
           },
           props: {
-            disposition:     :horizontal,
-            display_similar: false,
-            infinite_scroll: false
+            disposition:       :horizontal,
+            display_similar:   false,
+            display_load_more: false,
+            infinite_scroll:   false
           }
       } %>
     </div>
