--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -44,7 +44,7 @@ $border-color: #e0e0e0;
   [data-controller="places"][data-action="show"] & {
     @include mobile-only {
       position: fixed;
-      box-shadow: 0px 1px 6px 1px #00000030;
+      box-shadow: 0 0 6px 0 #00000030;
     }
   }
 
