Create collection of neighborhoods with google Geocoder

--- a/web/app/assets/stylesheets/components/me-chip.scss
+++ b/web/app/assets/stylesheets/components/me-chip.scss
@@ -24,6 +24,7 @@
     font-weight: 400;
     padding: 20px 13px;
     border-radius: 24px;
+    overflow: hidden;
   }
 
   .me-card__primary-section & {
