Refactor in app top bar component

--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -9,6 +9,10 @@
 
   [data-controller="events"][data-action="show"] &,
   [data-controller="places"][data-action="show"] &,
+  [data-controller="feeds"][data-action="neighborhood"] &,
+  [data-controller="feeds"][data-action="follow"] &,
+  [data-controller="feeds"][data-action="week"] &,
+  [data-controller="feeds"][data-action="suggestions"] &,
   [data-controller="users"] &,
   [data-controller="registrations"] &,
   [data-controller="sessions"] & {
