--- a/web/app/views/feeds/neighborhood.html.erb
+++ b/web/app/views/feeds/neighborhood.html.erb
@@ -1,4 +1,4 @@
-<section class="me-page  is-animated">
+<section class="me-page">
   <% content_for :canonical_url, category_events_url %>
   <% content_for :amp_url, category_events_url(format: :amp) %>
 
