--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -284,7 +284,7 @@
     <div class="me-chip-set__wrapper">
       <div class="me-chip-set mdc-chip-set mdc-chip-set--choice">
         <% ['Cidade Baixa', 'Centro Histórico', 'Bom Fim', 'Moinhos de Vento'].each do |neighborhood| %>
-          <%= link_to neighborhood_events_path(neighborhood.parameterize), class: "me-chip mdc-chip #{'mdc-chip--selected' if neighborhood == 'Cidade Baixa'}" do %>
+          <%= link_to neighborhood_events_path(neighborhood.parameterize), onclick: "window.AnimateModule.animatePageHide()", class: "me-chip mdc-chip #{'mdc-chip--selected' if neighborhood == 'Cidade Baixa'}" do %>
             <div class="mdc-chip__ripple"></div>
             <%= neighborhood.titleize %>
           <% end %>
@@ -324,7 +324,7 @@
   </section>
 
   <% if mobile_device? %>
-    <div data-controller="button" data-target="button.button" class="me-button mdc-button mdc-button--raised" onclick="Turbolinks.visit('/porto-alegre/eventos')" style="max-width: 80vw; margin: 36px auto; text-align: center; display: block">
+    <div data-controller="button" data-target="button.button" class="me-button mdc-button mdc-button--raised" onclick="location.assign('/porto-alegre/eventos')" style="max-width: 80vw; margin: 36px auto; text-align: center; display: block">
       <div class="mdc-button__ripple"></div>
       <span class="mdc-button__label">Explorar todos os eventos</span>
     </div>
