--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -9,6 +9,8 @@
 <% content_for :share_button_text, @event.details_name %>
 <% content_for :share_button_url, event_path(@event, format: :html) %>
 
+<%= content_for :preload_image, @event.image[:original].url(public: true) %>
+
 <script type="application/ld+json">
 {
  "@context": "http://schema.org",
@@ -152,7 +154,7 @@
         </div>
         <% end %>
           <div class="me-event-single__media" style="<%= get_image_style_attr @event %>">
-            <img src="<%= @event.image[:original].url(public: true) %>" alt="">
+            <img src="<%= @event.image[:original].url(public: true) %>" alt="<%= @event.details_name %>">
           </div>
         </div>
         <div class="me-event-single__content">
@@ -172,7 +174,7 @@
                   <div class="me-event-single__date-title">
                     <%= link_to limit_place_name_size(@event.place_details_name, 30), place_path(@event.place), class: 'me-is-clickable' %>
                   </div>
-                  <%= link_to google_maps_url(@event.geographic['address']), class: 'me-event-single__address', target: '_blank' do %>
+                  <%= link_to google_maps_url(@event.geographic['address']), class: 'me-event-single__address', target: '_blank', rel: 'noreferrer' do %>
                     <%= limit_address_name_size @event.geographic['address'] %>
                   <% end %>
                 </div>
