--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -45,7 +45,10 @@
   <link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500,700&display=swap">
+  <link rel="preload" href="https://fonts.googleapis.com/icon?family=Roboto:300,400,500,700&display=swap">
+  <% if content_for? :preload_image %>
+    <link rel="preload" as="image" href="<%= content_for :preload_image %>">
+  <% end %>
 
   <%= Gon::Base.render_data %>
 
