Adjust in animations for mobile apps

--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -42,6 +42,7 @@ $border-color: #e0e0e0;
 
   [data-controller="events"][data-action="show"] &,
   [data-controller="places"][data-action="show"] &,
+  [data-controller="organizers"][data-action="show"] &,
   [data-controller="feeds"][data-action="neighborhood"] &,
   [data-controller="feeds"][data-action="follow"] &,
   [data-controller="feeds"][data-action="week"] &,
