--- a/web/app/views/feeds/index.html.erb
+++ b/web/app/views/feeds/index.html.erb
@@ -185,7 +185,7 @@
           <div class="me-chip-set__wrapper">
             <div class="me-chip-set mdc-chip-set">
               <% current_user&.following_topics.filter { |topic| topic.events.active.size > 0 }.sort_by { |topic| topic.events.active.size }.reverse!.each do |topic| %>
-                <a href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| current_user&.last_sign_in_at < event.created_at } %>">
+                <a onclick="window.AnimateModule.animatePageHide()" href="<%= link_to_topic topic %>" class="me-chip mdc-chip <%= 'new' if topic.events.active.any? { |event| current_user&.last_sign_in_at < event.created_at } %>">
                   <div class="mdc-chip__ripple"></div>
                   <%= topic.details_name.titleize %>
                   <% if topic.events.active.size > 0 %>
@@ -237,7 +237,7 @@
           <div class="me-user-suggestions__inner">
             <% User.following_users(current_user).each do |user| %>
               <%= link_to user_path user do %>
-                <div class="me-user-suggestions__user">
+                <div onclick="window.AnimateModule.animatePageHide()" class="me-user-suggestions__user">
                   <div class="me-user-suggestions__picture" style="background-image: url('<%= user.picture %>')">
                   </div>
                   <div class="me-user-suggestions__name">
