--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -9,6 +9,7 @@
 
   [data-controller="events"][data-action="show"] &,
   [data-controller="places"][data-action="show"] &,
+  [data-controller="organizers"][data-action="show"] &,
   [data-controller="feeds"][data-action="neighborhood"] &,
   [data-controller="feeds"][data-action="follow"] &,
   [data-controller="feeds"][data-action="week"] &,
