--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -8,6 +8,7 @@
   }
 
   [data-controller="events"][data-action="show"] &,
+  [data-controller="movies"] &,
   [data-controller="places"][data-action="show"] &,
   [data-controller="organizers"][data-action="show"] &,
   [data-controller="feeds"][data-action="neighborhood"] &,
