--- a/web/app/assets/stylesheets/components/me-top-app-bar.scss
+++ b/web/app/assets/stylesheets/components/me-top-app-bar.scss
@@ -41,6 +41,7 @@ $border-color: #e0e0e0;
   }
 
   [data-controller="events"][data-action="show"] &,
+  [data-controller="movies"] &,
   [data-controller="places"][data-action="show"] &,
   [data-controller="organizers"][data-action="show"] &,
   [data-controller="feeds"][data-action="neighborhood"] &,
