--- a/web/app/assets/stylesheets/components/me-form.scss
+++ b/web/app/assets/stylesheets/components/me-form.scss
@@ -1,4 +1,3 @@
-
 .me-form {
   --mdc-layout-grid-gutter-phone: 12px 16px;
   --mdc-layout-grid-gutter-desktop: 12px 30px;
@@ -15,5 +14,18 @@
       color: $brand-color;
       text-decoration: underline;
     }
+  }
+
+  &__remove-field-button {
+
+  }
+
+  &__add-field-button {
+    
+  }
+
+  &__submit-button {
+    margin: 24px 0;
+    float: right;
   }
 }
