--- a/web/app/views/components/_bottom-navigation.html.erb
+++ b/web/app/views/components/_bottom-navigation.html.erb
@@ -1,7 +1,7 @@
 <%
 
 props = {
-  movies_count: Movie.select("*").from(Movie.select("*, jsonb_array_elements(dates) as date")).where("(date ->> 'date') > ?", DateTime.now.beginning_of_day).count
+  movies_count: Movie.all.size
 }.deep_merge!(props || {})
 
  %>
@@ -21,7 +21,7 @@ props = {
     </span>
     </div>
     <% if props[:movies_count] > 0 %>
-      <div data-target="bottom-navigation.item bottom-navigation.cinema" data-action="click->bottom-navigation#goto" data-path="/porto-alegre/cinema" class="me-bottom-navigation__item mdc-ripple-surface">
+      <div data-target="bottom-navigation.item bottom-navigation.cinema" data-action="click->bottom-navigation#goto" data-path="<%= movies_path %>" class="me-bottom-navigation__item mdc-ripple-surface">
         <i class="icon">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path d="M18 4l2 4h-3l-2-4h-2l2 4h-3l-2-4H8l2 4H7L5 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4h-4z"/>
@@ -29,7 +29,7 @@ props = {
           </svg>
         </i>
         <span class="label">
-        Cinema
+        Filmes
       </span>
       </div>
     <% end %>
